# cmakeExample

./: CMakeLists.txt  main.cpp
src/astar/: Astar.cpp  Astar.h  CMakeLists.txt
src/person/: CMakeLists.txt  person.cpp  person.h
src/stock/: CMakeLists.txt  stock.cpp  stock.h
src/student/: CMakeLists.txt  student.cpp  student.h
